<resources>
    <string name="app_name">petmii</string>
    <string name="feeder">自动喂食器</string>

    <string name="open">打开</string>
    <string name="close">关闭</string>
    <string name="setting">设置</string>
<<<<<<< HEAD
    <string name="logout">退出登录</string>
=======
>>>>>>> 235af1f2e7dcd142969589321679241a085334a2

    <!--hint-->
    <string name="hint_phone_num">手机号码</string>
    <string name="hint_verify_code">短信验证码</string>
    <string name="hint_pwd">密码</string>

    <!--button-->
    <string name="btn_submit">提交</string>
    <string name="btn_finish">完成</string>
    <string name="btn_retry">重试</string>
    <string name="btn_confirm">确认</string>
    <string name="btn_register">注册</string>
    <string name="btn_login">登录</string>
    <string name="pick_verify_code">获取验证码</string>
    <string name="btn_next">下一步</string>
    <string name="btn_get_code_try_angin">重新获取</string>
    <string name="get_sms_code">获取验证码</string>

    <!--title-->
    <string name="title_add_feeder">添加自动喂食器</string>
    <string name="title_reset">重置设备</string>
    <string name="title_choose_wifi">选择设备工作WIFI</string>
    <string name="title_config_wifi">选择设备热点</string>
    <string name="user_protocol">用户协议</string>

    <!--title-->
    <string name="title_add_feeder">添加自动喂食器</string>
    <string name="title_reset">重置设备</string>
    <string name="title_choose_wifi">选择设备工作WIFI</string>
    <string name="title_config_wifi">选择设备热点</string>
    <string name="user_protocol">用户协议</string>

    <!--prompt-->
    <string name="login_now">正在登录...</string>
    <string name="reg_now">正在注册...</string>
    <string name="search_wifi_now">正在搜索wifi...</string>
<<<<<<< HEAD
    <string name="ask_for_logout">确定退出登录？</string>

=======
>>>>>>> 235af1f2e7dcd142969589321679241a085334a2
    <string name="connect_device_tips">设备、手机和路由器请尽可能的靠近</string>
    <string name="light_state">指示灯状态:</string>
    <string name="light_state_desc">
        1.黄灯闪烁：网络断开；\n
        2.绿灯闪烁：等待接入网络；\n
        3.蓝灯常亮：网络正常；\n
        4.红灯闪烁：机器故障；\n
    </string>

    <string name="reset_net">重置网络:</string>
    <string name="reset_net_desc">
        1. 断开电源，等待着15秒后再接入电源；\n
        2. 同时按住电源开关和重置键5秒以上，电源指示灯为绿色闪烁状态。
    </string>
    <string name="reset_device">重置设备:</string>
    <string name="reset_device_desc">
        长按重置键10秒以上，等待机器重启\n
        (重置的设备须重新绑定手机和配置网络)
    </string>

    <string name="wait_device_tips">接通电源，确认设备处于待连接状态</string>

    <string name="please_input_phone">请输入手机号码</string>
    <string name="please_input_pwd">请输入密码</string>
    <string name="please_choose_wifi">请选择wifi热点</string>

<<<<<<< HEAD
    <string name="error_phone_number">手机号码格式不正确</string>

=======
>>>>>>> 235af1f2e7dcd142969589321679241a085334a2
    <string name="forget_pwd">忘记密码</string>
    <string name="user_reg">注册用户</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>

    <string name="about_petmill">关于遇见</string>
<<<<<<< HEAD
    <string name="play">玩耍</string>
    <string name="feed">喂食</string>
    <string name="leave_sound">留声</string>
=======
>>>>>>> 235af1f2e7dcd142969589321679241a085334a2
</resources>
