<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable name="btnEnable" type="boolean" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.yujian.petmii.frame.ui.LoginActivity">

        <RelativeLayout
            android:layout_width="@dimen/x328"
            android:layout_height="@dimen/y55"
            android:layout_marginTop="@dimen/x100"
            android:layout_gravity="center_horizontal">


            <EditText
                android:id="@+id/phone_number_et"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:drawablePadding="@dimen/x4"
                android:drawableLeft="@drawable/ic_phone"
                android:inputType="text"
                android:hint="@string/hint_phone_num"
                android:paddingRight="@dimen/x100"/>

            <Button
                android:id="@+id/pick_code_btn"
                android:layout_width="@dimen/x100"
                android:layout_height="@dimen/y38"
                android:layout_alignParentRight="true"
                android:layout_gravity="center_horizontal"
                android:text="@string/pick_verify_code"
                android:textSize="18sp"
                android:focusable="true"
                android:focusableInTouchMode="true"
                style="@style/ButtonTheme"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="@dimen/x328"
            android:layout_height="@dimen/y55"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/y8">

            <com.yujian.petmii.widget.ClearEditText
                android:id="@+id/verify_code_et"
                android:drawableLeft="@drawable/ic_password"
                android:drawablePadding="@dimen/x4"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:inputType="number|numberSigned"
                android:paddingRight="@dimen/x100"
                android:hint="@string/hint_verify_code"/>

            <ImageView
                android:id="@+id/clear_iv"
                android:layout_height="@dimen/x28"
                android:layout_width="@dimen/x28"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_clean_n"
                android:visibility="gone"/>
        </RelativeLayout>

        <Button
            android:id="@+id/login_btn"
            android:layout_width="@dimen/x310"
            android:layout_height="@dimen/y50"
            android:layout_marginTop="@dimen/x8"
            android:layout_gravity="center_horizontal"
            android:text="@string/btn_submit"
            android:textSize="18sp"
            android:alpha="@{btnEnable ? 1.0:0.25}"
            android:enabled="@{btnEnable}"
            style="@style/ButtonTheme"/>

    </LinearLayout>

</layout>
