<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
<<<<<<< HEAD
        <import type="android.view.View"/>

        <variable name="btnEnable" type="boolean" />
        <variable name="showCodeClear" type="boolean" />
        <variable name="canGetCode" type="boolean" />
=======
        <variable name="btnEnable" type="boolean" />
>>>>>>> 235af1f2e7dcd142969589321679241a085334a2
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.yujian.petmii.frame.ui.RegisterActivity">

        <RelativeLayout
            android:layout_width="@dimen/x328"
            android:layout_height="@dimen/y55"
            android:layout_marginTop="@dimen/x100"
            android:layout_gravity="center_horizontal">

            <EditText
                android:id="@+id/phone_number_et"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:drawablePadding="@dimen/x4"
                android:drawableLeft="@drawable/ic_phone"
                android:inputType="number"
<<<<<<< HEAD
                android:maxLength="11"
=======
>>>>>>> 235af1f2e7dcd142969589321679241a085334a2
                android:hint="@string/hint_phone_num"
                android:paddingRight="@dimen/x100"/>

            <Button
                android:id="@+id/get_code_btn"
                android:layout_width="@dimen/x100"
                android:layout_height="@dimen/y38"
                android:layout_alignParentRight="true"
                android:layout_gravity="center_horizontal"
                android:text="@string/pick_verify_code"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:background="@color/colorPrimary"
                android:alpha="@{canGetCode? 1.0f:0.5f}"
                android:enabled="@{canGetCode}"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="@dimen/x328"
            android:layout_height="@dimen/y55"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/y8">

            <EditText
                android:id="@+id/verify_code_et"
                android:drawableLeft="@drawable/ic_password"
                android:drawablePadding="@dimen/x4"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:inputType="number"
<<<<<<< HEAD
                android:maxLength="6"
=======
>>>>>>> 235af1f2e7dcd142969589321679241a085334a2
                android:paddingRight="@dimen/x100"
                android:hint="@string/hint_verify_code"/>

            <ImageView
                android:id="@+id/code_clear_iv"
                android:layout_height="@dimen/x28"
                android:layout_width="@dimen/x28"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_clean_n"
                android:visibility="@{showCodeClear ? View.VISIBLE:View.GONE}"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="@dimen/x328"
            android:layout_height="@dimen/y55"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/y8">

            <EditText
                android:id="@+id/user_pwd_et"
                android:drawableLeft="@drawable/ic_password"
                android:drawablePadding="@dimen/x4"
                android:maxLength="20"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
<<<<<<< HEAD
                android:inputType="textPassword"
=======
>>>>>>> 235af1f2e7dcd142969589321679241a085334a2
                android:paddingRight="@dimen/x100"
                android:hint="@string/hint_pwd"/>

            <ImageView
                android:id="@+id/pwd_eye_iv"
                android:layout_height="@dimen/x28"
                android:layout_width="@dimen/x28"
                android:clickable="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_eye"/>
        </RelativeLayout>

        <Button
            android:id="@+id/register_btn"
            android:layout_width="@dimen/x310"
            android:layout_height="@dimen/y50"
            android:layout_marginTop="@dimen/x8"
            android:layout_gravity="center_horizontal"
            android:text="@string/btn_register"
            android:textSize="18sp"
            android:alpha="@{btnEnable ? 1.0f : 0.25f}"
            android:enabled="@{btnEnable}"
            style="@style/ButtonTheme"/>

    </LinearLayout>

</layout>
